js/src/tests/test262/built-ins/Error/prototype/toString/15.11.4.4-10-1.js
var
errObj
=
new
Error
(
"
ErrorMessage
"
)
;
errObj
.
name
=
"
ErrorName
"
;
assert
.
sameValue
(
errObj
.
toString
(
)
"
ErrorName
:
ErrorMessage
"
'
errObj
.
toString
(
)
'
)
;
reportCompare
(
0
0
)
;
